@@ -96,6 +96,9 @@ All:
 - Fixed a bug in UNC path testing.
 - Improved command line parser usage help.
 - Fixed race condition bugs in wxCondition.
+- Added wxT_2() for forward compatibility with wxWidgets 3. Use it in
+  initialization of wxCmdLineEntryDesc struct elements and (very few) other
+  places where wxT() is required currently but won't be allowed in v3.
 
 All (GUI):
 
